--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SPACE TO INSERT FONT AWESOME  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/032df15d1f.js" crossorigin="anonymous"></script>
+    <!-- END -->
     <link rel="stylesheet" type="text/css" href="./styles/styles.css">
     <script defer src="./scripts/scripts.js"></script>
     <title>Index Page</title>
@@ -11,33 +20,34 @@
 <body>
     <header>
         <nav>
-            <div> <!-- [this would be the class for the logo, look at link styling] -->
-                <a href="index.html" img src="" alt="">
-                <!-- Link the logo with the img src and remember alt is the alternative text -->
-                <!-- Create a directory for images -->
+            <div class = "link-styling mobile-container">
+                <a href="index.html"></a><img src ="public/images/Cookie-logo.png" alt="A picture of an animal, with a cat-like smiling face with a turtle's body is the logo of this website.">
                 </a>
-                <p> <!-- The three buttons on the right/hamburger menu -->
-                    <ul> <!-- the nav bar class -->
-                        <li><a href="index.html">Index</a></li>
-                        <li><a href="videogallery.html">About</a></li>
-                        <li><a href="login.html">Login</a></li>
-                    </ul>
-                    <!--The Line Item Buttons: Index (home), About (background), Login -->
-                </p>
+                <!--The Line Item Buttons: Index (home), About (background), Login -->
+                <ul class="nav-bar right-text">
+                    <li><a href="index.html">Index</a></li>
+                    <li><a href="videogallery.html">About</a></li>
+                    <li><a href="login.html">Login</a></li>
+                </ul>
+                <a href="#"><i class="fa fa-bars hamburger"></i></a>  
             </div>
         </nav>
     </header>
-</body>
-<section>
-    <h1>Index Page</h1>
-    <!-- Content Outline Here based off page needs -->
-</section>
-<!-- Reconfirm class match ups to the semantic html -->
-<footer> <!-- Class: Footer -->
-    <section> <!-- Class: Bottom Row -->
-        <div> <!-- Class: Border -->
-            <div> <!-- Class: foot-bar -->
-                <h2>Developer Contact Info</h2><!-- I used h3 for CP, so let me see what this looks like [after inspection it looks bigger than anticipated...]-->
+<div class="content-container">
+    <section class="content-container">
+        <h1>Index Page</h1>
+    </section>
+    <section class="content-container-2">
+        <!-- Content Outline Here based off page needs -->
+        <p>Test</p>
+    </section>
+    <!-- Reconfirm class match ups to the semantic html -->
+</div>
+<footer class = "footer"> 
+    <section class = "bottom-row"> 
+        <div class = "border"> 
+            <div class=""> <!-- Class: foot-bar -->
+                <h2 class = "mini-container">Developer Contact Info</h2><!-- I used h3 for CP, so let me see what this looks like [after inspection it looks bigger than anticipated...]-->
                 <!-- Section 1: Developer Contact Info -->
                 <!-- To start off 3-9-21 -->
                 <p>
@@ -57,7 +67,7 @@
                     <!-- Cite Self -->
             </div>
             <div> <!-- Class: foot-bar -->
-                <h2>Learn More About Class Structure</h2><!-- I used h3 for CP, so let me see what this looks like [after inspection it looks bigger than anticipated...]-->
+                <h2 class = "mini-container">Learn More About Class Structure</h2><!-- I used h3 for CP, so let me see what this looks like [after inspection it looks bigger than anticipated...]-->
                 <p>["Creativity is intelligence having fun- Albert Einstein"]</p>
                 <!-- Section 2: Learn More About Class Structure ["Creativity is intelligence having fun- Albert Einstein"] -->
                 <!-- To start off 3-9-21 -->
@@ -76,7 +86,7 @@
                  -->
             </div>
             <div> <!-- Class: link styling, foot-bar --> <!-- <a href="#"> - so it doesn't link out yet [social media] -->
-                <h2>Call to Action</h2><!-- I used h3 for CP, so let me see what this looks like [after inspection it looks bigger than anticipated...]-->
+                <h2 class = "mini-container">Call to Action</h2><!-- I used h3 for CP, so let me see what this looks like [after inspection it looks bigger than anticipated...]-->
                 <!-- Section 3: Call to Action-->
                 <!-- Primary components: Donate, Collab(collaborate), Book(booking form) -->
                 <!-- To start off 3-9-21 -->
@@ -95,8 +105,29 @@
                         I. Book(booking form)
                      -->
             </div>
-            <div> <!-- Class: foot-bar -->
-                <h2>Talk to Us :] </h2><!-- I used h3 for CP, so let me see what this looks like [after inspection it looks bigger than anticipated...]-->
+            <div class="foot-bar">
+                <h2 class = "mini-container">Talk to Us :]</h2><!-- I used h3 for CP, so let me see what this looks like [after inspection it looks bigger than anticipated...]-->
+                <form action="#">
+                    <legend>
+                        <fieldset>
+                            <label for="First and Last Name">First and Last Name:</label>
+                            <input type="text" name="First and Last Name" id="First and Last Name" placeholder="First and Last Name">
+                        </fieldset>
+                        <!-- <br> -->
+                        <fieldset>
+                            <label for="Email">Email Address</label>
+                            <input type="Email" name="Email" id="Email" placeholder="Email Address">
+                        </fieldset>
+                        <!-- <br> -->
+                        <fieldset>
+                            <label for="Phone">Phone Number</label>
+                            <input type="number" name="Phone" id="Phone" placeholder="Phone Number">
+                        </fieldset>
+                        <!-- <br> -->
+                        <section class= "center-button">
+                            <input type="Submit" class="yellow-button" value="Submit">
+                        </section>
+                    </legend>   
                 <!-- Section 4: Talk to Us :] -->
                     <!-- To start off 3-9-21 -->
                         <!-- Form -->
@@ -108,4 +139,5 @@
         </div>
     </section>
 </footer>
+</body>
 </html>
