--- a/map.html
+++ b/map.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SPACE TO INSERT FONT AWESOME  -->
+
+    
     <link rel="stylesheet" type="text/css" href="./styles/styles.css">
     <script defer src="./scripts/scripts.js"></script>
     <title>Map</title>
@@ -30,6 +33,8 @@
 </body>
 <section>
     <h1>Map Page</h1>
+</section>
+<section>
     <!-- Content Outline Here based off page needs -->
 </section>
 <!-- Reconfirm class match ups to the semantic html -->
