--- a/videogallery.html
+++ b/videogallery.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SPACE TO INSERT FONT AWESOME  -->
+
+    
     <link rel="stylesheet" type="text/css" href="./styles/styles.css">
     <script defer src="./scripts/scripts.js"></script>
     <title>Video Showcase of Practitioners</title>
