completed map.html/edited index and CSS

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <section class="content-container-2">
         <!-- Content Outline Here based off page needs -->
         <p>Map of the Globe</p>
+        <a href="#"></a><img src="public/images/map-image.png" class="map-image" alt="Image of a United States map with pins in it">
     </section>
     <section class="content-container-2">
         <!-- Content Outline Here based off page needs -->
