--- a/contactus.html
+++ b/contactus.html
@@ -21,96 +21,102 @@
 <body>
     <header>
         <nav>
-            <div> <!-- [this would be the class for the logo, look at link styling] -->
-                <a href="index.html" img src="" alt="">
-                <!-- Link the logo with the img src and remember alt is the alternative text -->
-                <!-- Create a directory for images -->
+            <div class = "link-styling mobile-container">
+                <a href="index.html"></a><img src ="public/images/Cookie-logo.png" alt="A picture of an animal, with a cat-like smiling face with a turtle's body is the logo of this website.">
                 </a>
-                <p> <!-- The three buttons on the right/hamburger menu -->
-                    <ul> <!-- the nav bar class -->
-                        <li><a href="index.html">Index</a></li>
-                        <li><a href="videogallery.html">About</a></li>
-                        <li><a href="login.html">Login</a></li>
-                    </ul>
-                    <!--The Line Item Buttons: Index (home), About (background), Login -->
-                </p>
+                <ul class="nav-bar left-text">
+                    <li><a href="index.html">Index</a></li>
+                    <li><a href="videogallery.html">About</a></li>
+                    <li><a href="login.html">Login</a></li>
+                </ul>
+                <a href="#"><i class="fa fa-bars hamburger"></i></a>  
             </div>
         </nav>
     </header>
-</body>
-<section>
+<div class="content-container">
+    <section class="content-container-section">
     <h1>Contact Us Page</h1>
     <!-- Content Outline Here based off page needs -->
-</section>
-<!-- Reconfirm class match ups to the semantic html -->
-<footer> <!-- Class: Footer -->
-    <section> <!-- Class: Bottom Row -->
-        <div> <!-- Class: Border -->
-            <div> <!-- Class: foot-bar -->
-                <h2>Developer Contact Info</h2><!-- I used h3 for CP, so let me see what this looks like [after inspection it looks bigger than anticipated...]-->
-                <!-- Section 1: Developer Contact Info -->
-                <!-- To start off 3-9-21 -->
-                <p>
-                    <ul>
-                        <li>Content Line A</li>
-                        <li>Content Line B</li>
-                        <li>Content Line C</li>
-                    </ul>
-                </p>
-                <!-- After more development -->
-                    <!-- Cite CodeSquad -->
-                        <!-- <a href="http://codesquad.org" target="'_blank"> -->
-                        <!-- img src=create directory for the image -->
-                        <!-- <alt="CodeSquad.org Logo"> -->
-                        <!-- </a> -->
-                    <!-- Remember that the target is blank in order to have the user  stay on the same page -->
-                    <!-- Cite Self -->
+    </section>
+    <section class = "content-container-2">
+        <a href="#"></a><img src="public/images/contact-us.jpeg" class= "photo-image" alt="On a black chalkboard, there is a depiction of an envelope, a phone and the at symbol over the word 'Contact Us', near a hand with chalk in the person's fingertips.">
+    </section>
+    <section class="content-container-2">
+        <!-- TABLE -->
+        TABLE 
+    </section>
+</div>
+<footer class = "footer"> 
+    <section class = "bottom-row"> 
+        <div class = "border"> 
+            <div>
+                <h2 class = "mini-container">Developer Contact Info</h2>
+                <p class ="center-text-paragraph">A Product of CodeSquad</p>
+                <ul class="center-text-line-items link-styling">
+                    <li><a href="http://codesquad.org" target="'_blank"><img src="public/images/CodeSquad-website-logo.png"alt="CodeSquad.org Logo"></a></li>
+                    <li><a href="#">
+                        <i class="fa-brands fa-facebook-square"></i>
+                    </a></li>
+                    <li><a href="#">
+                        <i class="fa-brands fa-instagram-square"></i>
+                    </a></li>
+                    <li><a href="#">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a></li>
+                    <li>Developer: Kit Fenrir Amreik (they/she)</li>
+                    <li>Email: kitdamreik@gmail.com</li>
+                </ul>
             </div>
-            <div> <!-- Class: foot-bar -->
-                <h2>Learn More About Class Structure</h2><!-- I used h3 for CP, so let me see what this looks like [after inspection it looks bigger than anticipated...]-->
+            <div>
+                <h2 class = "mini-container">Learn More About Class Structure</h2>
                 <p>["Creativity is intelligence having fun- Albert Einstein"]</p>
-                <!-- Section 2: Learn More About Class Structure ["Creativity is intelligence having fun- Albert Einstein"] -->
-                <!-- To start off 3-9-21 -->
-                <p>
-                    <ul>
-                        <li>Content Line D</li>
-                        <li>Content Line E</li>
-                        <li>Content Line F</li>
+                <p class="center-text-paragraph">
+                    <ul class="center-text-line-items">
+                        <li>What Does A Semester Look Like?</li>
+                        <br>
+                        <li>The Class Structure and Learning Flow</li>
+                        <br>
+                        <li>What Is The Impact After A Year Of Classes?</li>
+                        <!-- After more development -->
+                         <!-- F. Procceds: instructor payment/direct reparations opp.-->
                     </ul>
                 </p>
-                <!-- After more development -->
-                <!-- 
-                    D. what a semester looks like
-                    E. class structure and learning flow
-                    F. instructor payment/direct reparations opp.
-                 -->
             </div>
-            <div> <!-- Class: link styling, foot-bar --> <!-- <a href="#"> - so it doesn't link out yet [social media] -->
-                <h2>Call to Action</h2><!-- I used h3 for CP, so let me see what this looks like [after inspection it looks bigger than anticipated...]-->
-                <!-- Section 3: Call to Action-->
-                <!-- Primary components: Donate, Collab(collaborate), Book(booking form) -->
-                <!-- To start off 3-9-21 -->
-                <p>
-                    <ul>
-                        <li>Content Line G</li>
-                        <li>Content Line H</li>
-                        <li>Content Line I</li>
+            <div class="link-styling">
+                <h2 class = "mini-container">Call to Action</h2>
+                <p class="center-text-paragraph">
+                    <ul class="center-text-line-items">
+                        <li>Donate Here</li>
+                        <br>
+                        <li>Collaborate & Capacity Build</li>
+                        <br>
+                        <li>Book a Practitioner</li>
                     </ul>
                 </p>
-                <!-- After more development -->
-                    <!-- Maybe Social Media? -->
-                    <!-- 
-                        G. Donate
-                        H. Collab(collaborate)
-                        I. Book(booking form)
-                     -->
             </div>
-            <div> <!-- Class: foot-bar -->
-                <h2>Talk to Us :] </h2><!-- I used h3 for CP, so let me see what this looks like [after inspection it looks bigger than anticipated...]-->
-                <!-- Section 4: Talk to Us :] -->
-                    <!-- To start off 3-9-21 -->
-                        <!-- Form -->
-                        <!-- Phone, Email, Name input -->
+            <div class="foot-bar">
+                <h2 class = "mini-container">Talk to Us :]</h2>
+                <form action="#">
+                    <legend>
+                        <fieldset>
+                            <label for="First and Last Name">First and Last Name:</label>
+                            <input type="text" name="First and Last Name" id="First and Last Name" placeholder="First and Last Name">
+                        </fieldset>
+                        <!-- <br> -->
+                        <fieldset>
+                            <label for="Email">Email Address</label>
+                            <input type="Email" name="Email" id="Email" placeholder="Email Address">
+                        </fieldset>
+                        <!-- <br> -->
+                        <fieldset>
+                            <label for="Phone">Phone Number</label>
+                            <input type="number" name="Phone" id="Phone" placeholder="Phone Number">
+                        </fieldset>
+                        <!-- <br> -->
+                        <section class= "center-button">
+                            <input type="Submit" class="yellow-button" value="Submit">
+                        </section>
+                    </legend>   
                     <!-- After more development -->
                         <!-- JS: console log and display in the browser as a confirmation/alert? -->
                         <!-- Button and styling -->
@@ -118,4 +124,5 @@
         </div>
     </section>
 </footer>
+</body>
 </html>
