--- a/map.html
+++ b/map.html
@@ -33,16 +33,16 @@
         </nav>
     </header>
 <div class="content-container">
-    <section class="content-container">
+    <section class="content-container-section">
         <h1>Map Page</h1>
     </section>
     <section class="content-container-2">
-        <a href="#"></a><img src="public/images/map-image.png" class="map-image" alt="Image of a United States map with pins in it">
+        <a href="#"></a><img src="public/images/map-image.png" class="photo-image" alt="Image of a United States map with pins in it">
     </section>
     <section class="content-container-2">
         <!-- Content Outline Here based off page needs -->
         <h3 class="center-text-paragraph">The Primary Practicum Projects</h3>
-        <p> <!-- Mention the PPP and the regions the students cover --> </p>
+        <p> This section will expand more upon the premise of the PPP, as well as the region the students cover/live in. </p>
     </section>
 </div>
 <footer class = "footer"> 
