--- a/index.html
+++ b/index.html
@@ -33,25 +33,28 @@
         </nav>
     </header>
 <div class="content-container">
-    <section class="content-container">
+    <section class="content-container-section">
         <h1>Index Page</h1>
     </section>
     <section class="content-container-2">
         <!-- Content Outline Here based off page needs -->
-        <p>Map of the Globe</p>
-        <a href="#"></a><img src="public/images/map-image.png" class="map-image" alt="Image of a United States map with pins in it">
+        <p class="expansion">Map of the Globe</p>
+        <a href="#"></a><img src="public/images/map-image.png" class="photo-image" alt="Image of a United States map with pins in it">
     </section>
     <section class="content-container-2">
         <!-- Content Outline Here based off page needs -->
-        <p>Photo Gallery</p>
+        <p class="expansion">Photo Gallery</p>
+        <a href="#"></a><img src="public/images/photo-gallery.jpeg" class="photo-image" alt="A picture of a scrapbook titled 'My Adventure Book'.">
     </section>
     <section class="content-container-2">
         <!-- Content Outline Here based off page needs -->
-        <p>Video Showcase of Practitioners</p>
+        <p class="expansion">Video Showcase of Practitioners</p>
+        <a href="#"></a><img src="public/images/comeout_videos_image.webp" class="photo-image" alt="There is a stock image of the Youtube icon in rainbow colors superimposed on the 'Progress Pride Flag.'">
     </section>
     <section class="content-container-2">
         <!-- Content Outline Here based off page needs -->
-        <p>Contact Us</p>
+        <p class="expansion">Contact Us</p>
+        <a href="#"></a><img src="public/images/contact-us.jpeg" class= "photo-image" alt="On a black chalkboard, there is a depiction of an envelope, a phone and the at symbol over the word 'Contact Us', near a hand with chalk in the person's fingertips.">
     </section>
 </div>
 <footer class = "footer"> 
