added hamburger psuedocode

--- a/contactus.html
+++ b/contactus.html
@@ -33,6 +33,30 @@
             </div>
         </nav>
     </header>
+<!-- Hamburger Menu Header from CP 
+<header>
+        <div class="header-wrapper">
+            <div class="link-styling mobile-container">
+                <a href="index.html"><img src="public/images/CodeSquad-Comics-logo.png" class="logo" alt="CodeSquad Comics"></a>
+            </div>
+            <div class="link-styling mobile-container">
+                <button class = "hamburger">
+                    <a href="javascript:void(0);" class="menu" for="open-sesame">
+                        <i class="fa fa-bars"></i>
+                    </a>
+                </button> 
+            </div>
+        </div>
+        <nav class="nav-bar link-styling open-sesame"> 
+            <section class="nav-bar-list">
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="login.html">Login</a>
+            </section>
+        </nav>
+    </header>
+-->
+
 <div class="content-container">
     <section class="content-container-section">
     <h1>Contact Us Page</h1>
