add hamborger menu functionality to all pages

--- a/map.html
+++ b/map.html
@@ -19,26 +19,20 @@
 </head>
 <body>
     <header>
-        <nav>
+        <!-- Updated Code 4-25 re: Hamburger Functionality [tested] -->
+        <div class="header-wrapper">
             <div class = "link-styling mobile-container">
                 <a href="index.html"></a><img src ="public/images/Cookie-logo.png" alt="A picture of an animal, with a cat-like smiling face with a turtle's body is the logo of this website.">
                 </a>
-                <ul class="nav-bar left-text">
+            </div>
+            <nav class="nav-bar link-styling open-sesame"> 
+                <ul class="nav-bar-list left-text-line-items">
                     <li><a href="index.html">Index</a></li>
                     <li><a href="videogallery.html">About</a></li>
                     <li><a href="login.html">Login</a></li>
                 </ul>
-                <a href="#"><i class="fa fa-bars hamburger"></i></a>  
-            </div>
-        </nav>
-    </header>
-<!-- Hamburger Menu Header from CP 
-<header>
-        <div class="header-wrapper">
-            <div class="link-styling mobile-container">
-                <a href="index.html"><img src="public/images/CodeSquad-Comics-logo.png" class="logo" alt="CodeSquad Comics"></a>
-            </div>
-            <div class="link-styling mobile-container">
+            </nav>
+            <div class = "link-styling mobile-container">
                 <button class = "hamburger">
                     <a href="javascript:void(0);" class="menu" for="open-sesame">
                         <i class="fa fa-bars"></i>
@@ -46,16 +40,7 @@
                 </button> 
             </div>
         </div>
-        <nav class="nav-bar link-styling open-sesame"> 
-            <section class="nav-bar-list">
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="login.html">Login</a>
-            </section>
-        </nav>
     </header>
--->
-
 <div class="content-container">
     <section class="content-container-section">
         <h1>Map Page</h1>
