CSS card functionality/cleaned up JS/add card templates to photogallery

--- a/contactus.html
+++ b/contactus.html
@@ -11,7 +11,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/032df15d1f.js" crossorigin="anonymous"></script>
     <!-- END -->
-    
     <link rel="stylesheet" type="text/css" href="./styles/styles.css">
     <script defer src="./scripts/scripts.js"></script>
     <title>Contact Us</title>
@@ -43,10 +42,10 @@
 <div class="content-container">
     <section class="content-container-section">
     <h1>Contact Us Page</h1>
-    <!-- Content Outline Here based off page needs -->
     </section>
     <section class = "content-container-2">
         <a href="#"></a><img src="public/images/contact-us.jpeg" class= "photo-image" alt="On a black chalkboard, there is a depiction of an envelope, a phone and the at symbol over the word 'Contact Us', near a hand with chalk in the person's fingertips.">
+        <p>Hello</p>
     </section>
     <section class="content-container-2">
         <!-- TABLE -->
