--- a/photogallery.html
+++ b/photogallery.html
@@ -11,7 +11,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/032df15d1f.js" crossorigin="anonymous"></script>
     <!-- END -->
-    
     <link rel="stylesheet" type="text/css" href="./styles/styles.css">
     <script defer src="./scripts/scripts.js"></script>
     <title>Photo Gallery of Practitioners</title>
@@ -43,13 +42,75 @@
 <div class="content-container">
     <section class="content-container-section">
     <h1>Photo Gallery of Practitioners Page</h1>
-    <!-- Content Outline Here based off page needs -->
     </section>
     <section class="content-container-2">
         <a href="#"></a><img src="public/images/photo-gallery.jpeg" class="photo-image" alt="A picture of a scrapbook titled 'My Adventure Book'.">
+        <div class="content-container-3">
+            <p>Hello</p>
+        </div>
     </section>
+    <h2 class="content-container-section title-tinker">Accelerated Practitioner Cohort 2021-2023</h2>
     <section class="content-container-2">
-        <p>PHOTO GALLERY OF A.P COHORT</p>
+        <!-- CARDS -->
+    <div class="card">
+        <a href="#"></a><img src="public/images/KIT.jpeg" class="template" alt="a picture of Kit, a Black woman smiling with a Black dress and flowers of varying colors, with a red rose in their right ear">
+        <div class="card-container">
+            <h3><b>Kit Fenrir Amreik</b></h3> 
+            <p>Global Restorative and Transformative Justice Practitioner, Instructor</p> 
+        </div>
+    </div>
+    <!-- CARD TEMPLATES - 7 (6 STUDENTS AND YESI) -->
+    <!-- 
+    <div class="card">
+        <a href="#"></a><img src="public/images/[name of student].jpeg" class="template" alt="a picture of [student name], a [descriptor] smiling with [what are they wearing]">
+        <div class="card-container">
+            <h3><b>[name of student]</b></h3> 
+            <p>[Title: Accelerated Practitioner Student, other credentials]</p> 
+        </div>
+    </div>
+    <div class="card">
+        <a href="#"></a><img src="public/images/[name of student].jpeg" class="template" alt="a picture of [student name], a [descriptor] smiling with [what are they wearing]">
+        <div class="card-container">
+            <h3><b>[name of student]</b></h3> 
+            <p>[Title: Accelerated Practitioner Student, other credentials]</p> 
+        </div>
+    </div>
+    <div class="card">
+        <a href="#"></a><img src="public/images/[name of student].jpeg" class="template" alt="a picture of [student name], a [descriptor] smiling with [what are they wearing]">
+        <div class="card-container">
+            <h3><b>[name of student]</b></h3> 
+            <p>[Title: Accelerated Practitioner Student, other credentials]</p> 
+        </div>
+    </div>
+    <div class="card">
+        <a href="#"></a><img src="public/images/[name of student].jpeg" class="template" alt="a picture of [student name], a [descriptor] smiling with [what are they wearing]">
+        <div class="card-container">
+            <h3><b>[name of student]</b></h3> 
+            <p>[Title: Accelerated Practitioner Student, other credentials]</p> 
+        </div>
+    </div>
+    <div class="card">
+        <a href="#"></a><img src="public/images/[name of student].jpeg" class="template" alt="a picture of [student name], a [descriptor] smiling with [what are they wearing]">
+        <div class="card-container">
+            <h3><b>[name of student]</b></h3> 
+            <p>[Title: Accelerated Practitioner Student, other credentials]</p> 
+        </div>
+    </div>
+    <div class="card">
+        <a href="#"></a><img src="public/images/[name of student].jpeg" class="template" alt="a picture of [student name], a [descriptor] smiling with [what are they wearing]">
+        <div class="card-container">
+            <h3><b>[name of student]</b></h3> 
+            <p>[Title: Accelerated Practitioner Student, other credentials]</p> 
+        </div>
+    </div>
+    <div class="card">
+        <a href="#"></a><img src="public/images/[name of student].jpeg" class="template" alt="a picture of [student name], a [descriptor] smiling with [what are they wearing]">
+        <div class="card-container">
+            <h3><b>[name of student]</b></h3> 
+            <p>[Title: Accelerated Practitioner Student, other credentials]</p> 
+        </div>
+    </div>
+     -->
     </section>
 </div>
 <footer class = "footer"> 
