--- a/contactus.html
+++ b/contactus.html
@@ -45,11 +45,13 @@
     </section>
     <section class = "content-container-2">
         <a href="#"></a><img src="public/images/contact-us.jpeg" class= "photo-image" alt="On a black chalkboard, there is a depiction of an envelope, a phone and the at symbol over the word 'Contact Us', near a hand with chalk in the person's fingertips.">
-        <p>Hello</p>
+        <div class="content-container-3">
+            <p>Hello</p>
+        </div>
     </section>
     <section class="content-container-2">
         <!-- TABLE -->
-        TABLE 
+        <h2 class = "mini-container">Schedule Meeting with a Practitioner :]</h2>
     </section>
 </div>
 <footer class = "footer"> 
