--- a/photogallery.html
+++ b/photogallery.html
@@ -49,68 +49,64 @@
             <p>Hello</p>
         </div>
     </section>
-    <h2 class="content-container-section title-tinker">Accelerated Practitioner Cohort 2021-2023</h2>
+    <h2 class="content-container-section title-tinker">A.P Cohort 2021-2023</h2>
     <section class="content-container-2">
-        <!-- CARDS -->
-    <div class="card">
+    <div class="card mint">
         <a href="#"></a><img src="public/images/KIT.jpeg" class="template" alt="a picture of Kit, a Black woman smiling with a Black dress and flowers of varying colors, with a red rose in their right ear">
         <div class="card-container">
-            <h3><b>Kit Fenrir Amreik</b></h3> 
-            <p>Global Restorative and Transformative Justice Practitioner, Instructor</p> 
+            <h3><b>Kit Fenrir Amreik (they/she)</b></h3> 
+            <p>Global Restorative and Transformative Justice Practitioner, Instructor of A.P. Cohort</p> 
         </div>
     </div>
-    <!-- CARD TEMPLATES - 7 (6 STUDENTS AND YESI) -->
-    <!-- 
-    <div class="card">
-        <a href="#"></a><img src="public/images/[name of student].jpeg" class="template" alt="a picture of [student name], a [descriptor] smiling with [what are they wearing]">
+    <div class="card vivid-sky-blue">
+        <a href="#"></a><img src="public/images/YESI.jpeg" class="template" alt="a picture of Yesinia JJ, a Black person with a pink afro and clear framed glasses looks at the camera">
         <div class="card-container">
-            <h3><b>[name of student]</b></h3> 
-            <p>[Title: Accelerated Practitioner Student, other credentials]</p> 
+            <h3><b>Yesinia JJ (she/her)</b></h3> 
+            <p>Accelerated Practitioner Instructor's Assistant & Shadowing/Training  Restorative and Transformative Justice Practitioner</p> 
         </div>
     </div>
-    <div class="card">
-        <a href="#"></a><img src="public/images/[name of student].jpeg" class="template" alt="a picture of [student name], a [descriptor] smiling with [what are they wearing]">
+    <div class="card gold-crayola">
+        <a href="#"></a><img src="public/images/KRIS.jpg" class="template" alt="a picture of Kristopher JT Toma-Lee, a 35 y/o genderqueer trans guy from Massachusetts. They are holding their phone, wearing a black undershirt and a green and blue shirt.">
         <div class="card-container">
-            <h3><b>[name of student]</b></h3> 
-            <p>[Title: Accelerated Practitioner Student, other credentials]</p> 
+            <h3><b>Kristopher JT Toma-Lee (they/he)</b></h3> 
+            <p>Accelerated Practitioner Student - Advanced Semester</p> 
         </div>
     </div>
-    <div class="card">
-        <a href="#"></a><img src="public/images/[name of student].jpeg" class="template" alt="a picture of [student name], a [descriptor] smiling with [what are they wearing]">
+    <div class="card medium-purple">
+        <a href="#"></a><img src="public/images/CHELSEA.JPEG" class="template" alt="a picture of Chelsea Colby, a White person against a grey background, wearing a blue sweater, and smiling with leopard print glasses.">
         <div class="card-container">
-            <h3><b>[name of student]</b></h3> 
-            <p>[Title: Accelerated Practitioner Student, other credentials]</p> 
+            <h3><b>Chelsea Colby (she/they)</b></h3> 
+            <p>Accelerated Practitioner Student - Advanced Semester</p> 
         </div>
     </div>
-    <div class="card">
-        <a href="#"></a><img src="public/images/[name of student].jpeg" class="template" alt="a picture of [student name], a [descriptor] smiling with [what are they wearing]">
+    <div class="card orchid-crayola">
+        <a href="#"></a><img src="public/images/CORI.jpeg" class="template" alt="a picture of Cori Falco, a White person with makeup on against a beach background, smiling with a light blue floral top">
         <div class="card-container">
-            <h3><b>[name of student]</b></h3> 
-            <p>[Title: Accelerated Practitioner Student, other credentials]</p> 
+            <h3><b>Cori Falco (she/her)</b></h3> 
+            <p>Accelerated Practitioner Student - Advanced Semester</p> 
         </div>
     </div>
-    <div class="card">
-        <a href="#"></a><img src="public/images/[name of student].jpeg" class="template" alt="a picture of [student name], a [descriptor] smiling with [what are they wearing]">
+    <div class="card mint">
+        <a href="#"></a><img src="public/images/RACHEL.JPG" class="template" alt="a picture of Rachel Freed Sussman, a White person smiling and snuggled in a blanket against a beach background">
         <div class="card-container">
-            <h3><b>[name of student]</b></h3> 
-            <p>[Title: Accelerated Practitioner Student, other credentials]</p> 
+            <h3><b>Rachel Freed Sussman (any pronoun)</b></h3> 
+            <p> Accelerated Practitioner Student - Advanced Semester</p> 
         </div>
     </div>
-    <div class="card">
-        <a href="#"></a><img src="public/images/[name of student].jpeg" class="template" alt="a picture of [student name], a [descriptor] smiling with [what are they wearing]">
+    <div class="card vivid-sky-blue">
+        <a href="#"></a><img src="public/images/THERESA.jpg" class="template" alt="a picture of Theresa Yannetty, a White person smiling with light makeup coupled with a stuffed animal in a chair">
         <div class="card-container">
-            <h3><b>[name of student]</b></h3> 
-            <p>[Title: Accelerated Practitioner Student, other credentials]</p> 
+            <h3><b>Theresa Yannetty (she/her)</b></h3> 
+            <p>Accelerated Practitioner Student - Advanced Semester</p> 
         </div>
     </div>
-    <div class="card">
-        <a href="#"></a><img src="public/images/[name of student].jpeg" class="template" alt="a picture of [student name], a [descriptor] smiling with [what are they wearing]">
+    <div class="card gold-crayola">
+        <a href="#"></a><img src="public/images/TIM.jpg" class="template" alt="a picture of Timothy Scott Crumley, a [descriptor] smiling with [what are they wearing]">
         <div class="card-container">
-            <h3><b>[name of student]</b></h3> 
-            <p>[Title: Accelerated Practitioner Student, other credentials]</p> 
+            <h3><b>Timothy Scott Crumley (he/him)</b></h3> 
+            <p>Accelerated Practitioner Student - Advanced Semester</p> 
         </div>
     </div>
-     -->
     </section>
 </div>
 <footer class = "footer"> 
