--- a/contactus.html
+++ b/contactus.html
@@ -49,10 +49,97 @@
             <p>Hello</p>
         </div>
     </section>
-    <section class="content-container-2">
-        <!-- TABLE -->
-        <h2 class = "mini-container">Schedule Meeting with a Practitioner :]</h2>
+    <h2 class = "content-container-section title-tinker">Schedule Meeting with a Practitioner :]</h2>
+    <section class="content-container-2 side-scroll-mobile">
+        <!-- try CSS grid/ add flexbox? -->
+        <!-- 5/2: cohort links for website/social media/ LinkedIn -->
+        <div class="card mint">
+            <a href="#"></a><img src="public/images/KIT.jpeg" class="template" alt="a picture of Kit, a Black woman smiling with a Black dress and flowers of varying colors, with a red rose in their right ear">
+            <div class="card-container">
+                <h3><b>Kit Fenrir Amreik (they/she)</b></h3> 
+                <br>
+                    <p> Email: kitdamreik@gmail.com</p> 
+                    <p> Phone: [###-###-####] </p>
+                    <p> Best Time to Reach: anytime from 12pm-9pm EST </p>  
+            </div>
+        </div>
+        <div class="card vivid-sky-blue">
+            <a href="#"></a><img src="public/images/YESI.jpeg" class="template" alt="a picture of Yesinia JJ, a Black person with a pink afro and clear framed glasses looks at the camera">
+            <div class="card-container">
+                <h3><b>Yesinia JJ (she/her)</b></h3> 
+                <br>
+                    <p> Email: name@gmail.com</p> 
+                    <p> Phone: [###-###-####] </p>
+                    <p> Best Time to Reach: anytime from [timeframe] EST </p>   
+            </div>
+        </div>
+        <div class="card gold-crayola">
+            <a href="#"></a><img src="public/images/KRIS.jpg" class="template" alt="a picture of Kristopher JT Toma-Lee, a 35 y/o genderqueer trans guy from Massachusetts. They are holding their phone, wearing a black undershirt and a green and blue shirt.">
+            <div class="card-container">
+                <h3><b>Kristopher JT Toma-Lee (they/he)</b></h3> 
+                <br>
+                    <p> Email: name@gmail.com</p> 
+                    <p> Phone: [###-###-####] </p>
+                    <p> Best Time to Reach: anytime from [timeframe] EST </p>  
+            </div>
+        </div>
+        <div class="card medium-purple">
+            <a href="#"></a><img src="public/images/CHELSEA.JPEG" class="template" alt="a picture of Chelsea Colby, a White person against a grey background, wearing a blue sweater, and smiling with leopard print glasses.">
+            <div class="card-container">
+                <h3><b>Chelsea Colby (she/they)</b></h3> 
+                <br>
+                    <p> Email: name@gmail.com</p> 
+                    <p> Phone: [###-###-####] </p>
+                    <p> Best Time to Reach: anytime from [timeframe] EST </p>  
+            </div>
+        </div>
+        <div class="card orchid-crayola">
+            <a href="#"></a><img src="public/images/CORI.jpeg" class="template" alt="a picture of Cori Falco, a White person with makeup on against a beach background, smiling with a light blue floral top">
+            <div class="card-container">
+                <h3><b>Cori Falco (she/her)</b></h3> 
+                <br>
+                    <p> Email: name@gmail.com</p> 
+                    <p> Phone: [###-###-####] </p>
+                    <p> Best Time to Reach: anytime from [timeframe] EST </p>  
+            </div>
+        </div>
+        <div class="card mint">
+            <a href="#"></a><img src="public/images/RACHEL.JPG" class="template" alt="a picture of Rachel Freed Sussman, a White person smiling and snuggled in a blanket against a beach background">
+            <div class="card-container">
+                <h3><b>Rachel Freed Sussman (any pronoun)</b></h3> 
+                <br>
+                    <p> Email: name@gmail.com</p> 
+                    <p> Phone: [###-###-####] </p>
+                    <p> Best Time to Reach: anytime from [timeframe] EST </p>  
+            </div>
+        </div>
+        <div class="card vivid-sky-blue">
+            <a href="#"></a><img src="public/images/THERESA.jpg" class="template" alt="a picture of Theresa Yannetty, a White person smiling with light makeup coupled with a stuffed animal in a chair">
+            <div class="card-container">
+                <h3><b>Theresa Yannetty (she/her)</b></h3> 
+                <br>
+                    <p> Email: name@gmail.com</p> 
+                    <p> Phone: [###-###-####] </p>
+                    <p> Best Time to Reach: anytime from [timeframe] EST </p>  
+            </div>
+        </div>
+        <div class="card gold-crayola">
+            <a href="#"></a><img src="public/images/TIM.jpg" class="template" alt="a picture of Timothy Scott Crumley, a [descriptor] smiling with [what are they wearing]">
+            <div class="card-container">
+                <h3><b>Timothy Scott Crumley (he/him)</b></h3> 
+                <br>
+                    <p> Email: name@gmail.com</p> 
+                    <p> Phone: [###-###-####] </p>
+                    <p> Best Time to Reach: anytime from [timeframe] EST </p>  
+            </div>
+        </div>
     </section>
+    <!-- 
+        <br>
+            <p> Email: name@gmail.com</p> 
+            <p> Phone: [###-###-####] </p>
+            <p> Best Time to Reach: anytime from [timeframe] EST </p>  
+     -->
 </div>
 <footer class = "footer"> 
     <section class = "bottom-row"> 
@@ -134,3 +221,58 @@
 </footer>
 </body>
 </html>
+
+<!-- Under Line 55 -->
+
+ <!-- <div class="table mini-container side-scroll-mobile"> -->
+            <!-- idk if I want the table at all -->
+        <!-- <table>
+            <thead>
+                <tr>
+                   <th><b>Name</b></th>
+                   <td colspan="150"></td>
+                   <th><b>Phone</b></th>
+                   <td colspan="150"></td>
+                   <th><b>Email</b></th>
+                   <td colspan="150"></td>
+                   <th><b>Submit</b></th>
+                   <td colspan="150"></td>
+                   <input type="button" class="yellow-button" value="Submit"></td>
+                </tr>
+            </thead>
+            <tbody>
+                <td colspan="200"></td>
+                <tr>
+                    <td>Kit Fenrir Amreik (they/she)</td>
+                    <td>555-555-5555</td>
+                    <td colspan="200"></td>
+                </tr>
+                <tr>
+                    <td colspan="200"></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td colspan="200"></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td colspan="200"></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td colspan="200"></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td colspan="200"></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td colspan="200"></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td colspan="200"></td>
+                </tr>
+            </tbody>
+        </table> --> 
