--- a/photogallery.html
+++ b/photogallery.html
@@ -50,7 +50,7 @@
         </div>
     </section>
     <h2 class="content-container-section title-tinker">A.P Cohort 2021-2023</h2>
-    <section class="content-container-2">
+    <section class="content-container-2 side-scroll-mobile">
     <div class="card mint">
         <a href="#"></a><img src="public/images/KIT.jpeg" class="template" alt="a picture of Kit, a Black woman smiling with a Black dress and flowers of varying colors, with a red rose in their right ear">
         <div class="card-container">
