--- a/login.html
+++ b/login.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
+    <html lang="en"></html>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./styles/styles.css">
-    <!-- SPACE TO INSERT FONT AWESOME  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/032df15d1f.js" crossorigin="anonymous"></script>
-    <!-- END -->
-    
     <script defer src="./scripts/scripts.js"></script>
-    <title>Login</title>
 </head>
 <body>
+    <title>Login</title>
     <header>
         <!-- Updated Code 4-25 re: Hamburger Functionality [tested] -->
         <div class="header-wrapper">
