minor add to Tim alt description

--- a/photogallery.html
+++ b/photogallery.html
@@ -100,7 +100,7 @@
         </div>
     </div>
     <div class="card gold-crayola">
-        <a href="#"></a><img src="public/images/TIM.jpg" class="template" alt="a picture of Timothy Scott Crumley, a [descriptor] smiling with [what are they wearing]">
+        <a href="#"></a><img src="public/images/TIM.jpg" class="template" alt="a picture of Timothy Scott Crumley, a White person smiling with a blue shirt, crosslegged against a neutral background">
         <div class="card-container">
             <h3><b>Timothy Scott Crumley (he/him)</b></h3> 
             <p>Accelerated Practitioner Student - Advanced Semester</p> 
