--- a/map.html
+++ b/map.html
@@ -120,7 +120,8 @@
                         <section class= "center-button">
                             <input type="Submit" class="yellow-button" value="Submit">
                         </section>
-                    </legend>   
+                    </legend>  
+                    </form> 
                     <!-- After more development -->
                         <!-- JS: console log and display in the browser as a confirmation/alert? -->
                         <!-- Button and styling -->
