add comment about the form

--- a/contactus.html
+++ b/contactus.html
@@ -190,10 +190,12 @@
             <div class="foot-bar">
                 <h2 class = "mini-container">Talk to Us :]</h2>
                 <form action="#">
+                    
                     <legend>
                         <fieldset>
                             <label for="First and Last Name">First and Last Name:</label>
                             <input type="text" name="First and Last Name" id="First and Last Name" placeholder="First and Last Name">
+                            <!-- <input type="text" name="title" id="title" minlength="1" required /> -->
                         </fieldset>
                         <!-- <br> -->
                         <fieldset>
