updated form for front-end validation

--- a/map.html
+++ b/map.html
@@ -81,8 +81,6 @@
                         <li>The Class Structure and Learning Flow</li>
                         <br>
                         <li>What Is The Impact After A Year Of Classes?</li>
-                        <!-- After more development -->
-                         <!-- F. Procceds: instructor payment/direct reparations opp.-->
                     </ul>
                 </p>
             </div>
@@ -100,31 +98,28 @@
             </div>
             <div class="foot-bar">
                 <h2 class = "mini-container">Talk to Us :]</h2>
-                <form action="#">
+                <form action="#" method="POST">
                     <legend>
+                        <p> Note: Responses will be stored and sent out to Practitioners </p>
+                        <p> Please wait up to 72 hours for follow up. Thank you :] </p>
+                    </legend>  
+                        <br>
                         <fieldset>
                             <label for="First and Last Name">First and Last Name:</label>
-                            <input type="text" name="First and Last Name" id="First and Last Name" placeholder="First and Last Name">
+                            <input type="text" name="First and Last Name" id="First and Last Name" placeholder="First and Last Name" minlength="6" required />
                         </fieldset>
-                        <!-- <br> -->
                         <fieldset>
                             <label for="Email">Email Address</label>
-                            <input type="Email" name="Email" id="Email" placeholder="Email Address">
+                            <input type="Email" name="Email" id="Email" placeholder="Email Address" minlength="10" required />
                         </fieldset>
-                        <!-- <br> -->
                         <fieldset>
                             <label for="Phone">Phone Number</label>
-                            <input type="number" name="Phone" id="Phone" placeholder="Phone Number">
+                            <input type="number" name="Phone" id="Phone" placeholder="Phone Number" min="10" required />
                         </fieldset>
-                        <!-- <br> -->
                         <section class= "center-button">
-                            <input type="Submit" class="yellow-button" value="Submit">
-                        </section>
-                    </legend>  
-                    </form> 
-                    <!-- After more development -->
-                        <!-- JS: console log and display in the browser as a confirmation/alert? -->
-                        <!-- Button and styling -->
+                            <input type="Submit" class="yellow-button" value="Submit" />
+                        </section> 
+                </form>
             </div>
         </div>
     </section>
