--- a/contactus.html
+++ b/contactus.html
@@ -132,12 +132,6 @@
             </div>
         </div>
     </section>
-    <!-- 
-        <br>
-            <p> Email: name@gmail.com</p> 
-            <p> Phone: [###-###-####] </p>
-            <p> Best Time to Reach: anytime from [timeframe] EST </p>  
-     -->
 </div>
 <footer class = "footer"> 
     <section class = "bottom-row"> 
@@ -170,8 +164,6 @@
                         <li>The Class Structure and Learning Flow</li>
                         <br>
                         <li>What Is The Impact After A Year Of Classes?</li>
-                        <!-- After more development -->
-                         <!-- F. Procceds: instructor payment/direct reparations opp.-->
                     </ul>
                 </p>
             </div>
@@ -189,90 +181,31 @@
             </div>
             <div class="foot-bar">
                 <h2 class = "mini-container">Talk to Us :]</h2>
-                <form action="#">
-                    
+                <form action="#" method="POST">
                     <legend>
+                        <p> Note: Responses will be stored and sent out to Practitioners </p>
+                        <p> Please wait up to 72 hours for follow up. Thank you :] </p>
+                    </legend>  
+                        <br>
                         <fieldset>
                             <label for="First and Last Name">First and Last Name:</label>
-                            <input type="text" name="First and Last Name" id="First and Last Name" placeholder="First and Last Name">
-                            <!-- <input type="text" name="title" id="title" minlength="1" required /> -->
+                            <input type="text" name="First and Last Name" id="First and Last Name" placeholder="First and Last Name" minlength="6" required />
                         </fieldset>
-                        <!-- <br> -->
                         <fieldset>
                             <label for="Email">Email Address</label>
-                            <input type="Email" name="Email" id="Email" placeholder="Email Address">
+                            <input type="Email" name="Email" id="Email" placeholder="Email Address" minlength="10" required />
                         </fieldset>
-                        <!-- <br> -->
                         <fieldset>
                             <label for="Phone">Phone Number</label>
-                            <input type="number" name="Phone" id="Phone" placeholder="Phone Number">
+                            <input type="number" name="Phone" id="Phone" placeholder="Phone Number" min="10" required />
                         </fieldset>
-                        <!-- <br> -->
                         <section class= "center-button">
-                            <input type="Submit" class="yellow-button" value="Submit">
-                        </section>
-                    </legend>   
-                    <!-- After more development -->
-                        <!-- JS: console log and display in the browser as a confirmation/alert? -->
-                        <!-- Button and styling -->
+                            <input type="Submit" class="yellow-button" value="Submit" />
+                        </section> 
+                </form>
             </div>
         </div>
     </section>
 </footer>
 </body>
 </html>
-
-<!-- Under Line 55 -->
-
- <!-- <div class="table mini-container side-scroll-mobile"> -->
-            <!-- idk if I want the table at all -->
-        <!-- <table>
-            <thead>
-                <tr>
-                   <th><b>Name</b></th>
-                   <td colspan="150"></td>
-                   <th><b>Phone</b></th>
-                   <td colspan="150"></td>
-                   <th><b>Email</b></th>
-                   <td colspan="150"></td>
-                   <th><b>Submit</b></th>
-                   <td colspan="150"></td>
-                   <input type="button" class="yellow-button" value="Submit"></td>
-                </tr>
-            </thead>
-            <tbody>
-                <td colspan="200"></td>
-                <tr>
-                    <td>Kit Fenrir Amreik (they/she)</td>
-                    <td>555-555-5555</td>
-                    <td colspan="200"></td>
-                </tr>
-                <tr>
-                    <td colspan="200"></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td colspan="200"></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td colspan="200"></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td colspan="200"></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td colspan="200"></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td colspan="200"></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td colspan="200"></td>
-                </tr>
-            </tbody>
-        </table> --> 
