added admin page/CRUD/updated footers for all pages/link re-direction for Photo/Contact Us

--- a/index.html
+++ b/index.html
@@ -37,29 +37,44 @@
             </div>
         </div>
     </header>
-<div class="content-container">
+<div class="content-container link-styling">
     <section class="content-container-section">
         <h1>Index Page</h1>
     </section>
     <section class="content-container-2">
-        <!-- Content Outline Here based off page needs -->
-        <p class="expansion">Map of the Globe</p>
-        <a href="#"></a><img src="public/images/map-image.png" class="photo-image" alt="Image of a United States map with pins in it">
+        <div class="content-container-3 vivid-sky-blue">
+            <a href="/map.html">
+            <p class="expansion">Map of the Globe</p></a>
+        </div>
+        <img src="public/images/map-image.png" class="photo-image" alt="Image of a United States map with pins in it">
     </section>
     <section class="content-container-2">
-        <!-- Content Outline Here based off page needs -->
-        <p class="expansion">Photo Gallery</p>
-        <a href="#"></a><img src="public/images/photo-gallery.jpeg" class="photo-image" alt="A picture of a scrapbook titled 'My Adventure Book'.">
+        <div class="content-container-3 vivid-sky-blue">
+            <a href="/photogallery.html">
+            <p class="expansion">Photo Gallery</p></a>
+        </div>
+        <img src="public/images/photo-gallery.jpeg" class="photo-image" alt="A picture of a scrapbook titled 'My Adventure Book'.">
     </section>
     <section class="content-container-2">
-        <!-- Content Outline Here based off page needs -->
-        <p class="expansion">Video Showcase of Practitioners</p>
-        <a href="#"></a><img src="public/images/comeout_videos_image.webp" class="photo-image" alt="There is a stock image of the Youtube icon in rainbow colors superimposed on the 'Progress Pride Flag.'">
+        <div class="content-container-3 vivid-sky-blue">
+            <a href="/videogallery.html">
+            <p class="expansion">Video Showcase of Practitioners</p></a>
+        </div>
+        <img src="public/images/comeout_videos_image.webp" class="photo-image" alt="There is a stock image of the Youtube icon in rainbow colors superimposed on the 'Progress Pride Flag.'">
     </section>
     <section class="content-container-2">
-        <!-- Content Outline Here based off page needs -->
-        <p class="expansion">Contact Us</p>
-        <a href="#"></a><img src="public/images/contact-us.jpeg" class= "photo-image" alt="On a black chalkboard, there is a depiction of an envelope, a phone and the at symbol over the word 'Contact Us', near a hand with chalk in the person's fingertips.">
+        <div class="content-container-3 vivid-sky-blue">
+            <a href="/contactus.html">
+            <p class="expansion">Contact Us</p></a>
+        </div>
+        <img src="public/images/contact-us.jpeg" class= "photo-image" alt="On a black chalkboard, there is a depiction of an envelope, a phone and the at symbol over the word 'Contact Us', near a hand with chalk in the person's fingertips.">
+    </section>
+    <section class="content-container-2">
+        <div class="content-container-3 vivid-sky-blue">
+            <a href="tj-quiz.html">
+            <p class="expansion">Test Your TJ Knowledge!</p></a>
+        </div>
+        <img src="./public/images/discussioncirclesec.jpeg" class= "photo-image" alt="a discussion of people sitting in a circle">
     </section>
 </div>
 <footer class = "footer"> 
@@ -104,7 +119,7 @@
                         <br>
                         <li>Collaborate & Capacity Build</li>
                         <br>
-                        <li>Book a Practitioner</li>
+                        <a href="https://forms.gle/EudpBs4ijHbRsWfr9">Book a Practitioner</a>
                     </ul>
                 </p>
             </div>
