--- a/login.html
+++ b/login.html
@@ -39,20 +39,19 @@
     </header>
 <div class="content-container">
     <section class="content-container-section">
-    <h1>Login Page</h1>
-    <!-- Content Outline Here based off page needs -->
+        <h1>Login Page</h1>
     </section>
     <section class="content-container-2">
-        <form action="#">
+        <form action="#" method="POST">
             <legend>
                 <fieldset>
                     <label for="Email">Email Address</label>
-                    <input type="Email" name="Email" id="Email" placeholder="Email">
+                    <input type="Email" name="Email" id="Email" placeholder="Email" minlength="10" required />>
                 </fieldset>
                 <br>
                 <fieldset>
                     <label for="Password">Password</label>
-                    <input type="Password" name="Password" id="Password" placeholder="Password">
+                    <input type="Password" name="Password" id="Password" placeholder="Password" minlength="6" required />
                 </fieldset>
                 <br>
                 <section class= "center-button">
@@ -104,7 +103,7 @@
                         <br>
                         <li>Collaborate & Capacity Build</li>
                         <br>
-                        <li>Book a Practitioner</li>
+                        <a href="https://forms.gle/EudpBs4ijHbRsWfr9">Book a Practitioner</a>
                     </ul>
                 </p>
             </div>
