--- a/map.html
+++ b/map.html
@@ -92,7 +92,7 @@
                         <br>
                         <li>Collaborate & Capacity Build</li>
                         <br>
-                        <li>Book a Practitioner</li>
+                        <a href="https://forms.gle/EudpBs4ijHbRsWfr9">Book a Practitioner</a>
                     </ul>
                 </p>
             </div>
