--- a/videogallery.html
+++ b/videogallery.html
@@ -40,7 +40,6 @@
 <div class="content-container">
     <section class="content-container-section">
     <h1>Video Showcase of Practitioners</h1>
-    <!-- Content Outline Here based off page needs -->
     </section>
     <section class="content-container-2">
         <a href="#"></a><img src="public/images/comeout_videos_image.webp" class="photo-image" alt="There is a stock image of the Youtube icon in rainbow colors superimposed on the 'Progress Pride Flag.'">
@@ -92,7 +91,7 @@
                         <br>
                         <li>Collaborate & Capacity Build</li>
                         <br>
-                        <li>Book a Practitioner</li>
+                        <a href="https://forms.gle/EudpBs4ijHbRsWfr9">Book a Practitioner</a>
                     </ul>
                 </p>
             </div>
