--- a/contactus.html
+++ b/contactus.html
@@ -44,12 +44,14 @@
     <section class = "content-container-2">
         <a href="#"></a><img src="public/images/contact-us.jpeg" class= "photo-image" alt="On a black chalkboard, there is a depiction of an envelope, a phone and the at symbol over the word 'Contact Us', near a hand with chalk in the person's fingertips.">
         <div class="content-container-3">
-            <p>Hello</p>
+            <p>Hello, you've reached our contact page!</p>
+            <p>Please see our parameters of outreach and let's coordinate a meeting!</p>
+            <p>If you need immediate assistance, please see the</p>
+            <p>"Book a Practitioner" Link in the bottom of the document.</p>
         </div>
     </section>
     <h2 class = "content-container-section title-tinker">Schedule Meeting with a Practitioner :]</h2>
     <section class="content-container-2 side-scroll-mobile">
-        <!-- try CSS grid/ add flexbox? -->
         <!-- 5/2: cohort links for website/social media/ LinkedIn -->
         <div class="card mint">
             <a href="#"></a><img src="public/images/KIT.jpeg" class="template" alt="a picture of Kit, a Black woman smiling with a Black dress and flowers of varying colors, with a red rose in their right ear">
@@ -71,16 +73,6 @@
                     <p> Best Time to Reach: anytime from [timeframe] EST </p>   
             </div>
         </div>
-        <div class="card gold-crayola">
-            <a href="#"></a><img src="public/images/KRIS.jpg" class="template" alt="a picture of Kristopher JT Toma-Lee, a 35 y/o genderqueer trans guy from Massachusetts. They are holding their phone, wearing a black undershirt and a green and blue shirt.">
-            <div class="card-container">
-                <h3><b>Kristopher JT Toma-Lee (they/he)</b></h3> 
-                <br>
-                    <p> Email: name@gmail.com</p> 
-                    <p> Phone: [###-###-####] </p>
-                    <p> Best Time to Reach: anytime from [timeframe] EST </p>  
-            </div>
-        </div>
         <div class="card medium-purple">
             <a href="#"></a><img src="public/images/CHELSEA.JPEG" class="template" alt="a picture of Chelsea Colby, a White person against a grey background, wearing a blue sweater, and smiling with leopard print glasses.">
             <div class="card-container">
@@ -95,6 +87,16 @@
             <a href="#"></a><img src="public/images/CORI.jpeg" class="template" alt="a picture of Cori Falco, a White person with makeup on against a beach background, smiling with a light blue floral top">
             <div class="card-container">
                 <h3><b>Cori Falco (she/her)</b></h3> 
+                <br>
+                    <p> Email: name@gmail.com</p> 
+                    <p> Phone: [###-###-####] </p>
+                    <p> Best Time to Reach: anytime from [timeframe] EST </p>  
+            </div>
+        </div>
+        <div class="card gold-crayola">
+            <a href="#"></a><img src="public/images/KRIS.jpg" class="template" alt="a picture of Kristopher JT Toma-Lee, a 35 y/o genderqueer trans guy from Massachusetts. They are holding their phone, wearing a black undershirt and a green and blue shirt.">
+            <div class="card-container">
+                <h3><b>Kristopher JT Toma-Lee (they/he)</b></h3> 
                 <br>
                     <p> Email: name@gmail.com</p> 
                     <p> Phone: [###-###-####] </p>
@@ -121,7 +123,7 @@
                     <p> Best Time to Reach: anytime from [timeframe] EST </p>  
             </div>
         </div>
-        <div class="card gold-crayola">
+        <div class="card medium-purple">
             <a href="#"></a><img src="public/images/TIM.jpg" class="template" alt="a picture of Timothy Scott Crumley, a White person smiling with a blue shirt, crosslegged against a neutral background">
             <div class="card-container">
                 <h3><b>Timothy Scott Crumley (he/him)</b></h3> 
@@ -175,7 +177,7 @@
                         <br>
                         <li>Collaborate & Capacity Build</li>
                         <br>
-                        <li>Book a Practitioner</li>
+                        <a href="https://forms.gle/EudpBs4ijHbRsWfr9">Book a Practitioner</a>
                     </ul>
                 </p>
             </div>
